--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_bkgroud">#161616</color>
+    <color name="gray_bkgroud_appdata">#D4D4D4</color>
+
 </resources>
