--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                     android:layout_height="0dp"
                     android:layout_margin="50dp"
                     android:layout_weight="1"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    android:src="@drawable/ic_user" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="75dp"
                     android:layout_margin="15dp"
-                    android:text="Button" />
+                    android:text="Inicio sesión" />
 
                 <Button
                     android:id="@+id/log_in_button_activitymain"
