--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray_bkgroud">#161616</color>
+    <color name="gray_bkgroud">#191919</color>
+    <color name="gray_bkgroud_appdata_night">#3A3A3A</color>
     <color name="gray_bkgroud_appdata">#D4D4D4</color>
+    <color name="buttonBackgroundLight">#FFFFFF</color> <!-- Color de fondo para el tema claro -->
+    <color name="buttonBackgroundDark">#000000</color> <!-- Color de fondo para el tema oscuro -->
+    <color name="UpfontBackgroundLight">#FFFFFF</color>
+    <color name="DownfontBackgroundLight">#F0F0F0</color>
+    <color name="UpfontBackgroundDark">#4B4B4B</color>
+    <color name="DownfontBackgroundDark">#2F2F2F</color>
 
 </resources>
