--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,28 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.App_BotonPanico" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/black</item>
     </style>
 
     <style name="Theme.App_BotonPanico" parent="Base.Theme.App_BotonPanico" />
+    
+    <style name="BackGround_screen">
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="BackGround_screen_appdata" >
+        <item name="cardBackgroundColor">@color/gray_bkgroud_appdata</item>
+    </style>
+
+    <style name="DownBackGround_screen_menu">
+        <item name="android:background">@color/DownfontBackgroundLight</item>
+    </style>
+    <style name="UpBackGround_screen_menu">
+        <item name="android:background">@color/UpfontBackgroundLight</item>
+    </style>
+
+
+
+
+
 </resources>
